blog/css/default.css
:root {
  --pink: #f76ca5;
  --blue: #007bff;
  --logo-size: 50px;
  --background: aliceblue;
  --logo-width: 50px;
  --logo-height: 35px;
}

html,
body {
  height: 100%;
}

html {
  font-size: 1rem;
}

body {
  font-size: 1.3rem;
}

header {
  box-shadow: 0 0 20px rgba(0,0,0,0.05);
  padding: 10px 0;
}

.no-list-style {
  list-style-type: none;
  padding-left: 0;
  margin-bottom: 0;
}

.content {
  flex: 1 0 auto;
}

/* Same as Bootstrap .sr-only */
figcaption {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

a {
  color: var(--blue);
}

a:hover {
  color: var(--pink);
}

a.post-title {
  font-size: 1.7rem;
}

.btn-tag-unselected {
  color: var(--blue);
  background-color: white;
  border-color: var(--blue);
}

.btn-tag-icon {
  font-size: 1.2rem;
  line-height: 0;
}

.btn-tag-icon-lg {
  font-size: 1.5rem;
  line-height: 0;
}

.btn-tag-selected:hover {
  color: var(--blue);
  background-color: white;
  border-color: var(--blue);
}

.btn-tag-selected {
  color: white;
  background-color: var(--pink);
  border-color: var(--pink);
}

.btn-tag-unselected:hover {
  color: white;
  background-color: var(--pink);
  border-color: var(--pink);
}

.btn-sm {
  padding: .4rem .3rem;
  font-size: .875rem;
  line-height: 1;
  border-radius: .2rem;
  margin-right: 5px;
}

.twitter-tweet {
  margin: auto;
}

.pink {
  color: var(--pink);
}

.badge-white {
  background-color: white;
  color: var(--blue);
}

.badge-sm {
  padding: 0.1em .4em;
}

.logo-odone {
  display: block;
  margin: auto;
  width: var(--logo-size);
  height: var(--logo-size);
  text-decoration: none;
  cursor: pointer;
  background-size: var(--logo-size);
  background-image: url('/images/android-chrome-512x512.png');
  -webkit-tap-highlight-color: var(--pink);
}

.logo-odone:hover, .logo-odone:focus, .logo-odone:active {
  background-image: url('/images/android-chrome-512x512-pink.png');
}

.newsletter-container {
  color: white;
  background: var(--pink);
  box-shadow: 0 0 10px var(--pink);
  flex-shrink: none;
}

.read-more-container {
  box-shadow: 0 10px 10px -10px var(--blue);
  background-color: var(--blue);
}

a.read-more {
  color: black;
}

a.read-more:hover {
  color: black;
}

h1 {
  font-size: 2.6rem;
}

h2 {
  font-size: 2.2rem;
}

article h2 {
  font-size: 1.5rem;
  text-align: center;
  text-transform: uppercase;
  margin-bottom: 1rem;
}

.smaller {
  font-size: 1rem;
}

@media (min-width: 320px) {
  body {
    font-size: 1.3rem;
  }
}

div.sourceCode {
  margin-left: calc(50% - 50vw);
  width: 100vw;
}

pre.sourceCode {
  background: var(--background);
  padding: 30px 5vw 30px 5vw;
  -webkit-overflow-scrolling: touch;
}

code {
  background: var(--background);
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
  color: deeppink;
}

.content-image {
  width: 100%;
}

img {
  width: 100%;
}

.selfie {
  width: 80px;
  height: 80px;
  border-radius: 50%;
}

.accordion {
  margin-bottom: 16px;
}

input[name="accordion"] {
  display: none;
}

.accordion-label {
  color: #007bff;
  cursor: pointer;
  margin-bottom: 0;
}

.accordion-label:hover {
  color: var(--pink);
  text-decoration: underline;
}

.accordion-content {
  overflow: hidden;
  max-height: 0;
  transition: max-height 0.5s ease-in;
}

input[name="accordion"]:checked ~ .accordion-content {
  max-height: 150px;
  transition: max-height 0.5s ease-out;
}

table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode, table.sourceCode pre
   { margin: 0; padding: 0; border: 0; vertical-align: baseline; border: none; }
td.lineNumbers { border-right: 1px solid #AAAAAA; text-align: right; color: #AAAAAA; padding-right: 5px; padding-left: 5px; }
td.sourceCode { padding-left: 5px; }
.sourceCode span.kw { color: deeppink; font-weight: bold; }
.sourceCode span.dt { color: blue; }
.sourceCode span.dv { color: blueviolet; }
.sourceCode span.bn { color: blueviolet; }
.sourceCode span.fl { color: blueviolet; }
.sourceCode span.ch { color: blueviolet; }
.sourceCode span.st { color: blueviolet; }
.sourceCode .diff span.st { color: black; background: #fbe9ec; }
.sourceCode span.co { color: grey; font-style: italic; }
.sourceCode span.ot { color: deeppink; }
.sourceCode span.al { color: red; font-weight: bold; }
.sourceCode span.fu { color: blue; }
.sourceCode span.re { }
.sourceCode span.er { color: red; font-weight: bold; }
.sourceCode span.va { color: deeppink; }
.sourceCode .diff span.va { color: black; background: #d3fbd3; }

blockquote:before {
  content: "\201C";
  font-size: 5rem;
  position: absolute;
  top: 19px;
  left: -12px;
  font-family: lato;
  color: var(--pink);
}

blockquote {
  position: relative;
  padding-left: 2em;
  line-height: 2.2rem;
  font-size: 1.4rem;
  font-style: italic;
  letter-spacing: 0.07rem;
  color: #666;
  font-weight: 300;
}

blockquote.pullquote:before {
  content: "";
}

blockquote.pullquote {
  border-left: 0.2em solid var(--pink);
  padding-left: 1em;
  color: black;
  font-weight: 400;
  letter-spacing: 0.03rem;
}

@media all and (min-width: 992px) {
  blockquote.pullquote{
    padding: 0 20px;
    max-width: 300px;
    float: right;
    margin: 20px -10% 20px 20px;
  }
}

.tweet-this-icon {
  height: 30px;
  margin-bottom: 4px;
}

.logos {
  line-height: 50px;
  margin: 20px 0 5px 0;
}

.logos > li {
  display: inline-block;
  margin-right: 10px;
}

.logos > li:last-of-type {
  margin-right: 0;
}

.logo {
  display: block;
  text-indent: -9999px;
  width: var(--logo-width);
  height: var(--logo-height);
}

.logo-youtube {
  background: url(/images/logo-youtube.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-twitter {
  background: url(/images/logo-twitter.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-devto {
  background: url(/images/logo-devto.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-medium {
  background: url(/images/logo-medium.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-facebook {
  background: url(/images/logo-facebook.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-linkedin {
  background: url(/images/logo-linkedin.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-github {
  background: url(/images/logo-github.svg);
  background-size: var(--logo-width) var(--logo-height);
}

.logo-goodreads {
  background: url(/images/logo-goodreads.svg);
  background-size: var(--logo-width) var(--logo-height);
}

